--- a/html/build.gradle
+++ b/html/build.gradle
@@ -12,6 +12,7 @@ gwt {
     project.webAppDirName = 'webapp'
 
     compiler {
+        style = "PRETTY";
         strict = true;
         enableClosureCompiler = true;
         disableCastChecking = true;
